--- a/sortable-item-app/client/src/Form/components/pages/Categories/App.css
+++ b/sortable-item-app/client/src/Form/components/pages/Categories/App.css
@@ -8,12 +8,12 @@
   background: transparent;
 }
 
-h2 {
+/* h2 {
   cursor: move;
   border:0;
   background:#f8f9fa;
   color:#444;
-}
+} */
 .add-btn {
   float: left;
   border:0;
@@ -32,7 +32,7 @@ h2 {
   cursor: pointer;
 }
 #submit {
-  width: 75px;
+  width: auto;
   background:darkred;
   color:white;
   cursor: pointer;
